--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <link rel="stylesheet" href="style.css">
     <!--This is what the user is going to see when the click on the site-->
     <!--This is to import the logo from the folder that its saved to-->
-        <img src="ImpracticalJokersLogo.png"> </p>
+        <img src="ImpracticalJokersLogo.png">
         <!--This is going to be the header for the site and is placed under the logo-->
         <h1>Impractical Jockers fan website</h1>
         <!--This is a little description on what the show is so if the user wishes to continue they can so-->
     <p>It's a show about about 4 guy who are in there late 30's to early 40's. They have been best friends since high school<br>
         <!--This is to break the text up -->   
     </br>
-    They are part of a comedy group called the Tenderloins who keep touring between episodes and sessions.
+    They are part of a comedy group called the Tenderloins who keep touring between episodes and seasons.
     They had an idea for a hidden camera show but instead of the joke being on the public the joke is on them instead.
     In each episode they go though differnt challanges with an in ear piece so the other 2 or 3 (behind the sceans) guys can give them directions on what to do. 
     <!--Pictures of jokers from high school and today-->
@@ -29,6 +29,12 @@
 <!--This is to fit the text after the images-->
 <p>
 A lot of the episodes are in and around New York city wether it's in a office building showing a group of people a presentation that the other guys have created. Or posing as a receptionist checking people into their focus groups but the completely ridiculous names that they have to call out have been made up by the other guys. They have also posed as cashiers at fast food retaurants whilst they are getting the customers food the joker has to do and say what ever they say. Weather they go around shopping malls and parks going up to completely strangers saying things and repeating what to do. Some other locations that they have filmed at locations have been the empire state building and madame tussauds.
+<br></br>
+<div class="menu">
+    <button type=“button”><a href="index.html">home</a></button>
+    <button type=“button”><a href="pagetwo.html">page 2</a></button>
+    <button type=“button”><a href="pagethree.html">movie information</a></button>
+    </div>
 </p>
 </body>
 </html>
