--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="style.css">
     <!--This is what the user is going to see when the click on the site-->
     <!--This is to import the logo from the folder that its saved to-->
-        <img src="ImpracticalJokersLogo.png">
+        <img src="ImpracticalJokersLogo.png"id="logo">
         <!--This is going to be the header for the site and is placed under the logo-->
         <h1>Impractical Jockers fan website</h1>
         <!--This is a little description on what the show is so if the user wishes to continue they can so-->
