--- a/page two.html
+++ b/page two.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="ImpracticalJokersLogo.png"> </p>
+    <img src="ImpracticalJokersLogo.png"id="logo"> </p>
     <!--This is going to be the header for the site and is placed under the logo-->
     <h1>Impractical Jockers fan website</h1>
     <p>
