--- a/pagethree.html
+++ b/pagethree.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="ImpracticalJokersLogo.png">
+    <img src="ImpracticalJokersLogo.png"id="logo">
     <h1>Impractical Jockers fan website</h1>
     <p>
         As they are best friends they don’t let each other get of lightly during the challenges and punishment. Whilst one is afraid of kittens and cats there has been a couple of his punishment involving them. And because he can’t back out of the punishment he had to go through it.  Whilst the another joker is afraid of spider and tarantula's he did the same punishment.           
