--- a/pagetwo.html
+++ b/pagetwo.html
@@ -4,16 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>impractical jokers</title>
+    <!--This links the code on this page with the code on the CSS age-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="ImpracticalJokersLogo.png"id="logo"> </p>
     <!--This is going to be the header for the site and is placed under the logo-->
+    <img src="ImpracticalJokersLogo.png"id="logo">
+    <!--This is the header for the site which is across all 3 pages-->
     <h1>Impractical Jockers fan website</h1>
+    <!--This to describe the knock off shows-->
     <p>
-        As the show has got more and more popular there has been spin of shows of the show like a UK impractical jokers which didnt take off and ended after 3 sessons spaning over 4 years.
-        Also it was made up from 4 UK comedy's w 
+        Also it features 4 comedians who haven’t been friends for many years
+
+        The UK version just came about because the UK comedian’s thought it would be funnier than the US version.
+        <!--This is to break the code up-->
+    <br>
+    </br>
+    But the UK version has ended (years ago) and the US version of the show are in their 9th seasons and continued though a pandemic. 
     </p>
+    <!--The jokers in the car-->
+    <img src="ImpracticalJokersCar.JPG">
+    <!--This is to set another pagraph-->
+    <p>
+        As the show kept on picking up steam and getting more popular they decided to try and get a movie deal which they got. Instead of the film being set in & around New York City they go road trip to Miami Florida to see a pula abdul show with 3 VIP tickets. To decide which three jokers got the three ticket on the road trip they participated in challenges on the way  there and who ever lost didn’t get to go.
+        <br>
+        </br>
+        Whilst they are backstage at the show they got to meet Paula Abdul again and she offers them three tickets on a private jet that’ll take them back to New York from Miami. They go through the same process to decided witch three of them will go on the jet. The loser of challenges has to do a punishment before going back home.
+    <!--This is end the pargraph-->
+    </p>
+    <!--This is to code the buttons for all the pages-->
+    <div class="menu">
+        <button type=“button”><a href="index.html">home</a></button>
+        <button type=“button”><a href="pagetwo.html">page 2</a></button>
+        <button type=“button”><a href="pagethree.html">movie information</a></button>
+        </div>
 </body>
 </html>
