--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>impractical jokers</title>
+    <title>impractical jockers</title>
 </head>
 <body>
         <!--This is to link to the code on style.css it can be used on multiple pages-->
