--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>impractical jockers</title>
+    <title>impractical jokers</title>
 </head>
 <body>
         <!--This is to link to the code on style.css it can be used on multiple pages-->
@@ -17,18 +17,16 @@
         <!--This is going to be the header for the site and is placed under the logo-->
         <h1>Impractical Jockers fan website</h1>
         <!--This is a little description on what the show is so if the user wishes to continue they can so-->
-    <p>It's a show about about 4 guy who are in there late 30's to early 40's. They have been best friends since high school<br>
+    <p>It's a show about 4 guys who are in their late 30's to early 40's. They have been best friends since high school.<br>
         <!--This is to break the text up -->   
     </br>
-    They are part of a comedy group called the Tenderloins who keep touring between episodes and seasons.
-    They had an idea for a hidden camera show but instead of the joke being on the public the joke is on them instead.
-    In each episode they go though differnt challanges with an in ear piece so the other 2 or 3 (behind the sceans) guys can give them directions on what to do. 
+    They are part of a comedy group called the Tenderloins who keep touring between episodes and seasons. They had an idea for a hidden camera show but instead of the joke being on the public the joke is on them instead. In each episode they go though differnt challanges with an in ear piece so the other 2 or 3 (behind the scenes) guys can give them directions on what to do. 
     <!--Pictures of jokers from high school and today-->
     <img src = "jokersfromhightschool.jpg"> <img src="cast of jockers.png">
 </p>
 <!--This is to fit the text after the images-->
 <p>
-A lot of the episodes are in and around New York city wether it's in a office building showing a group of people a presentation that the other guys have created. Or posing as a receptionist checking people into their focus groups but the completely ridiculous names that they have to call out have been made up by the other guys. They have also posed as cashiers at fast food retaurants whilst they are getting the customers food the joker has to do and say what ever they say. Weather they go around shopping malls and parks going up to completely strangers saying things and repeating what to do. Some other locations that they have filmed at locations have been the empire state building and madame tussauds.
+A lot of the episodes are in and around New York city wether it's in an office building showing a group of people a presentation that the other guys have created. Or posing as a receptionist checking people into their focus groups but with completely ridiculous names that they have to call out that have been made up by the other guys. They have also posed as cashiers at fast food retaurants whilst they are getting the customers food, the joker has to do and say what ever they say. Weather they go around shopping malls and parks going up to complete strangers saying things and repeating what to do. Some other locations that they have filmed at have been the Empire State building and Madame Tussauds.
 <br></br>
 <div class="menu">
     <button type=“button”><a href="index.html">home</a></button>
