--- a/pagetwo.html
+++ b/pagetwo.html
@@ -15,22 +15,22 @@
     <h1>Impractical Jockers fan website</h1>
     <!--This to describe the knock off shows-->
     <p>
-        Also it features 4 comedians who haven’t been friends for many years
+        Also it features 4 comedians who haven’t been friends for as many years.
 
-        The UK version just came about because the UK comedian’s thought it would be funnier than the US version.
+        The UK version came about because the UK comedian’s thought it would be funnier than the US version.
         <!--This is to break the code up-->
     <br>
     </br>
-    But the UK version has ended (years ago) and the US version of the show are in their 9th seasons and continued though a pandemic. 
+    But the UK version ended years ago and the US version of the show is in it's 9th seasons and has continued through the Covid pandemic. 
     </p>
     <!--The jokers in the car-->
     <img src="ImpracticalJokersCar.JPG">
     <!--This is to set another pagraph-->
     <p>
-        As the show kept on picking up steam and getting more popular they decided to try and get a movie deal which they got. Instead of the film being set in & around New York City they go road trip to Miami Florida to see a pula abdul show with 3 VIP tickets. To decide which three jokers got the three ticket on the road trip they participated in challenges on the way  there and who ever lost didn’t get to go.
+        As the show kept on picking up steam and getting more popular they decided to try and get a movie deal which they got. Instead of the film being set in & around New York City they go road trip to Miami Florida to see a Paula Abdul show with 3 VIP tickets. To decide which three jokers got the three ticket on the road trip they participated in challenges on the way there and who ever lost didn’t get to go.
         <br>
         </br>
-        Whilst they are backstage at the show they got to meet Paula Abdul again and she offers them three tickets on a private jet that’ll take them back to New York from Miami. They go through the same process to decided witch three of them will go on the jet. The loser of challenges has to do a punishment before going back home.
+        Whilst they are backstage at the show they got to meet Paula Abdul again and she offered them three tickets on a private jet that’ll take them back to New York from Miami. They go through the same process to decided witch three of them will go on the jet. The loser of challenges has to do a punishment before going back home.
     <!--This is end the pargraph-->
     </p>
     <!--This is to code the buttons for all the pages-->
