--- a/pagethree.html
+++ b/pagethree.html
@@ -11,13 +11,13 @@
     <img src="ImpracticalJokersLogo.png"id="logo">
     <h1>Impractical Jockers fan website</h1>
     <p>
-        As they are best friends they don’t let each other get of lightly during the challenges and punishment. Whilst one is afraid of kittens and cats there has been a couple of his punishment involving them. And because he can’t back out of the punishment he had to go through it.  Whilst the another joker is afraid of spider and tarantula's he did the same punishment.           
+        As they are best friends they don’t let each other get of lightly during the challenges and punishment. Whilst one is afraid of kittens and cats there has been a couple of his punishments involving them. And because he can’t back out of the punishment he had to go through with it. Whilst another joker is afraid of spider's and tarantulas he did a simular punishment.
     </p>
     <p>
         <img src= "thetenderlions.jpg"> <img src="ImpracticalJokersandjeffdaniles.JPG">
         <br>
         </br>
-        Danica McKellar, Gary Busey and Jeff Daniels are a few of the faces that have been in on challenge and or punishments to get to get the best reactions out of the jokers.
+        Danica McKellar, Gary Busey and Jeff Daniels are a few of the faces that have been in the challenge and or punishments to get the best reactions out of the jokers.
         
     </p>
 <div class="menu">
